# video-streaming

./: CMakeLists.txt  README.md  face_detector.cpp  face_detector.hpp  receive_video.cpp  stream_video.cpp  video_streamer.cpp  video_streamer.h  video_streamer.hpp
.github/workflows/: build.yml
opencv_install/: install-opencv.sh
